// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() skips lerna package settings if v7 or later 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
      },
      {
        "depName": "@org/b",
      },
      {
        "depName": "@org/c",
      },
      {
        "currentValue": "^7.0.0",
        "depName": "lerna",
      },
    ],
    "managerData": {},
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "managerData": {
      "packageJsonName": "@org/a",
    },
    "packageFile": "packages/a/package.json",
  },
  {
    "managerData": {
      "packageJsonName": "@org/b",
    },
    "packageFile": "packages/b/package.json",
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() updates internal packages 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "currentValue": "6.1.0",
        "depName": "lerna",
      },
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "workspacesPackages": undefined,
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "workspacesPackages": undefined,
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses lerna package settings 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "currentValue": "^6.0.0",
        "depName": "lerna",
      },
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "workspacesPackages": undefined,
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "workspacesPackages": undefined,
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
[
  {
    "deps": [
      {
        "currentValue": "^6.0.0",
        "depName": "lerna",
      },
    ],
    "managerData": {
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "oldpackages/*",
      ],
      "workspacesPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "workspacesPackages": [
        "packages/*",
      ],
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "workspacesPackages": [
        "packages/*",
      ],
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
  },
]
`;
